[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "y2-knowledge-tool"
version = "0.1.0"
description = "Knowledge-based document models for task management"
requires-python = ">=3.9"
dependencies = ["pydantic>=2.0", "PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
apply-json-patch = "knowledge_tool.apply_json_patch:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["knowledge_tool/tests"]
python_files = ["test_*.py"]
norecursedirs = ["test_models"]
